--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 	<link rel="stylesheet" type="text/css" href="Css/util/animation.css">
 	<!-- <link rel="stylesheet" type="text/css" href="Css/util/reponsive.css"> -->
 
+	<!-- Fontawesome -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1657,43 +1660,41 @@
     					<div class="footer_col">
     						<div class="footer_more">
     							<div class="footer_more-page footer_more-children">
-    								<strong>Pages</strong>
+    								<p class="fw-600 fs-18">Pages</p>
     								<ul >
-    									<li>➤ Home</li>
-    									<li>➤ About</li>
-    									<li>➤ Services</li>
-    									<li>➤ Gallery</li>
-    									<li>➤ Team</li>
+    									<li><i class="fa-solid fa-caret-right"></i>Home</li>
+    									<li><i class="fa-solid fa-caret-right"></i>About</li>
+    									<li><i class="fa-solid fa-caret-right"></i>Services</li>
+    									<li><i class="fa-solid fa-caret-right"></i>Gallery</li>
+    									<li><i class="fa-solid fa-caret-right"></i>Team</li>
     								</ul>
     							</div>
     							<div class="footer_more-informations footer_more-children">
-    								<strong>Informations</strong>
+    								<strong class="fw-600 fs-18">Informations</strong>
     								<ul>
-    									<li>➤ Terms & conditions</li>
-    									<li>➤ Privacy policy</li>
-    									<li>➤ Blog</li>
-    									<li>➤ Contact</li>
+    									<li><i class="fa-solid fa-caret-right"></i>Terms & conditions</li>
+    									<li><i class="fa-solid fa-caret-right"></i>Privacy policy</li>
+    									<li><i class="fa-solid fa-caret-right"></i>Blog</li>
+    									<li><i class="fa-solid fa-caret-right"></i>Contact</li>
     								</ul>
     							</div>
     						</div>
     					</div>
     				</div>
-    				<div class="row footer_bottom">
-    					<div class="l-6 col-12 m-12 footer_col">
-    						<div class="footer_internet row">
-    							<div class="l-6 col-6 m-12 footer_group-icon">
+    				<div class="footer_bottom">
+    					<div class="footer_col">
+    						<div class="footer_internet">
+    							<div class="footer_group-icon">
     								<span class="icon"><img src="assets/icon_home1/facebook-f.png" alt=""></span>
 	    							<span class="icon"><img src="assets/icon_home1/twitter (1).png" alt=""></span>
 	    							<span class="icon"><img src="assets/icon_home1/linkedin-in.png" alt=""></span>
-    							</div>
-    							<div class="l-6 col-6 m-12 footer_group-icon">
     								<span class="icon"><img src="assets/icon_home1/youtube.png" alt=""></span>
     								<span class="icon"><img src="assets/icon_home1/instagram (1).png" alt=""></span>
     							</div>
     						</div>
     					</div>
-    					<div class="l-6 col-12 m-12 footer_col">
-    						<p class="footer_certification"><i>© AltDesain Studio 2021 - All right reserved.</i></p>
+    					<div class="footer_col">
+    						<p class="footer_certification fw-400 fs-16"><i>© AltDesain Studio 2021 - All right reserved.</i></p>
     					</div>
     				</div>
     			</div>
