fix delete space footer

--- a/index.html
+++ b/index.html
@@ -1712,6 +1712,7 @@
             
     	</div>
     </footer>
+	<div id="_atssh" style="display: none;"></div>
    	<script type="text/javascript" src="Javascript/index.js"></script>
 </body>
 
