--- a/index.html
+++ b/index.html
@@ -6,26 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Home 1</title>
 
-    <link rel="stylesheet" type="text/css" href="Css/components/header.css">
-    <link rel="stylesheet" type="text/css" href="Css/components/slider.css">
-    <link rel="stylesheet" type="text/css" href="Css/components/core.css">
-    <link rel="stylesheet" type="text/css" href="Css/components/about.css">
-    <link rel="stylesheet" type="text/css" href="Css/components/profession.css">
-    <link rel="stylesheet" type="text/css" href="Css/components/contact.css">
-    <link rel="stylesheet" type="text/css" href="Css/components/footer.css">
-
     <link rel="stylesheet" type="text/css" href="index.css">
-    <link rel="stylesheet" type="text/css" href="Css/shares/button.css">
-    <link rel="stylesheet" type="text/css" href="Css/shares/card.css">
-    <link rel="stylesheet" type="text/css" href="Css/shares/textbox.css">
 
-	<link rel="stylesheet" type="text/css" href="Css/util/animation.css">
-	<!-- <link rel="stylesheet" type="text/css" href="Css/util/reponsive.css"> -->
-
-	<!-- Fontawesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -68,7 +51,7 @@
 	<div class="Container">
 		<div class="Slider">
 			<div class="slider_wrapper">
-				<div class="slider_main-left">
+				<div class="slider_main-left left l-6 col-12 m-12">
 					<div class="slider_main-child">
 						<h1 class="slider_main-title fw-600 fs-48">Clinic & beauty consultant</h1>
 						<p class="slider_main-description fw-500 fs-16">It is a long established fact that a reader will be by the readable content of a page.</p>
@@ -77,7 +60,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="slider_main-right">
+				<div class="slider_main-right left l-6 col-12 m-12">
 					<svg width="602" height="401" viewBox="0 0 602 401" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M299.5 42L0 221.5L301 400.5L601.5 221.5L299.5 42Z" fill="#E4E7FF" fill-opacity="0.35"/>
 							<path d="M299.5 27L0 206.5L301 385.5L601.5 206.5L299.5 27Z" fill="#E4E7FF" fill-opacity="0.5"/>
@@ -152,7 +135,7 @@
 					</p>
 				</div>
 				<div class="core_item" id="Core-item">
-					<div class="core_col">
+					<div class="core_col row">
 						<div class="l-4 col-12 m-12">
 							<div class="core_item_card Card	">
 								<div class="card_wrapper">
@@ -559,7 +542,7 @@
 								Id dui erat sed quam tellus in purus. Pellentesque congue fringilla cras tellus enim.
 							</p>
 							<div class="about_btn_group">
-								<div class="about_btnLeft">
+								<div class="about_btnLeft ">
 									<button class="about_container_btnLeft btn">Learn More</button>
 								</div>
 								<div class="about_btnRight">
@@ -613,7 +596,7 @@
 				</div>
 				<div class="profession_item">
 					<div class="row profession_item_wrap">
-						<div class="profession_item_row l-4 col-12 m-12 element small">
+						<div class="profession_item_row element small">
 							<div class="card_professional">
 								<div class="card_wrapper_pro">
 									<div class="card_image_pro">
@@ -692,7 +675,7 @@
 								</div>	
 							</div>
 						</div>
-						<div class="profession_item_row l-4 col-12 m-12 element large">
+						<div class="profession_item_row element large">
 							<div class="Card card_professional">
 								<div class="card_wrapper_pro">
 									<div class="card_image_pro">
@@ -771,7 +754,7 @@
 								</div>	
 							</div>
 						</div>
-						<div class="profession_item_row l-4 col-12 m-12 element small">
+						<div class="profession_item_row element small">
 							<div class="card_professional">
 								<div class="card_wrapper_pro">
 									<div class="card_image_pro">
@@ -1591,7 +1574,7 @@
 								</svg>
 						</div>
 					</div>
-					<div class="contact_mainRight">
+					<div class="contact_mainRight l-6 col-12 m-12">
 						<div class="contact_main_wrapper">
 							<div class="contact_mainRight_info">
 								<div class="contact_title_desc">
@@ -1605,10 +1588,10 @@
 							<div class="contact_mainRight_form">
 								<div class="form_group">
 									<div class="row contact_rowname">
-										<div class="contact_col-input">
+										<div class="l-6 col-6 m-12 contact_col-input">
 											<input type="text" name="" required class="form_controll contact_name" placeholder="First name">
 										</div>
-										<div class="contact_col-input">
+										<div class="l-6 col-6 m-12 contact_col-input">
 											<input type="text" name="" required class="form_controll contact_name contact_name-last" placeholder="Last name">
 										</div>
 									</div>
@@ -1685,11 +1668,11 @@
     					<div class="footer_col">
     						<div class="footer_internet">
     							<div class="footer_group-icon">
-    								<span class="icon"><img src="assets/icon_home1/facebook-f.png" alt=""></span>
-	    							<span class="icon"><img src="assets/icon_home1/twitter (1).png" alt=""></span>
-	    							<span class="icon"><img src="assets/icon_home1/linkedin-in.png" alt=""></span>
-    								<span class="icon"><img src="assets/icon_home1/youtube.png" alt=""></span>
-    								<span class="icon"><img src="assets/icon_home1/instagram (1).png" alt=""></span>
+    								<span class="icon"><a target="_blank" href="https://www.facebook.com/bachasoftware"><img src="assets/icon_home1/facebook-f.png" alt=""></a></span>
+	    							<span class="icon"><a target="_blank" href="https://x.com/i/flow/login?redirect_after_login=%2FBacHaSoftware"><img src="assets/icon_home1/twitter (1).png" alt=""></a></span>
+	    							<span class="icon"><a target="_blank" href="https://www.linkedin.com/company/bac-ha-software/"><img src="assets/icon_home1/linkedin-in.png" alt=""></a></span>
+    								<span class="icon"><a target="_blank" href="https://www.youtube.com/@bhsoft"><img src="assets/icon_home1/youtube.png" alt=""></a></span>
+    								<span class="icon"><a target="_blank" href=""><img src="assets/icon_home1/instagram (1).png" alt=""></a></span>
     							</div>
     						</div>
     					</div>
