Fix responsive header, slide, core

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<div class="Container">
 		<div class="Slider">
 			<div class="slider_wrapper">
-				<div class="slider_main-left left l-6 col-12 m-12">
+				<div class="slider_main-left">
 					<div class="slider_main-child">
 						<h1 class="slider_main-title fw-600 fs-48">Clinic & beauty consultant</h1>
 						<p class="slider_main-description fw-500 fs-16">It is a long established fact that a reader will be by the readable content of a page.</p>
@@ -60,7 +60,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="slider_main-right left l-6 col-12 m-12">
+				<div class="slider_main-right ">
 					<svg width="602" height="401" viewBox="0 0 602 401" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M299.5 42L0 221.5L301 400.5L601.5 221.5L299.5 42Z" fill="#E4E7FF" fill-opacity="0.35"/>
 							<path d="M299.5 27L0 206.5L301 385.5L601.5 206.5L299.5 27Z" fill="#E4E7FF" fill-opacity="0.5"/>
@@ -123,9 +123,13 @@
 						</svg>
 				</div>
 			</div>
-			<button class="Slider_button"></button>
+			<div class="slider_button_group">
+				<button class="slider_button"></button>
+				<button class="slider_button slider_button_active"></button>
+				<button class="slider_button"></button>
+			</div>
 		</div>
-		<div class="Core ">
+		<div class="Core">
 			<div class="core_wrapper">
 				<div class="title_desc">
 					<span class="info_tip fw-600 fs-16">Main Services</span>
@@ -135,7 +139,7 @@
 					</p>
 				</div>
 				<div class="core_item" id="Core-item">
-					<div class="core_col row">
+					<div class="core_col">
 						<div class="l-4 col-12 m-12">
 							<div class="core_item_card Card	">
 								<div class="card_wrapper">
