Fix responsive & animation

--- a/index.html
+++ b/index.html
@@ -534,6 +534,7 @@
 			</div>
 		</div>
 		<div class="About ">
+			<div class="about_background"></div>
 			<div class="about_wrapper">
 				<div class="about_container">
 					<div class="about_container_left">
