--- a/index.html
+++ b/index.html
@@ -578,8 +578,8 @@
 					</p>
 				</div>
 				<div class="profession_item">
-					<div class="row profession_item_wrap">
-						<div class="profession_item_row element small">
+					<div class="profession_item_wrap">
+						<div class="profession_item_row element">
 							<div class="card_professional">
 								<div class="card_wrapper_pro">
 									<div class="card_image_pro">
@@ -658,7 +658,7 @@
 								</div>	
 							</div>
 						</div>
-						<div class="profession_item_row element large">
+						<div class="profession_item_row element">
 							<div class="card_professional">
 								<div class="card_wrapper_pro">
 									<div class="card_image_pro">
@@ -737,7 +737,7 @@
 								</div>	
 							</div>
 						</div>
-						<div class="profession_item_row element small">
+						<div class="profession_item_row element">
 							<div class="card_professional">
 								<div class="card_wrapper_pro">
 									<div class="card_image_pro">
@@ -1572,21 +1572,21 @@
 								<div class="form_group">
 									<div class="row contact_rowname">
 										<div class="l-6 col-6 m-12 contact_col-input">
-											<input type="text" name="" required class="form_controll contact_name" placeholder="First name">
+											<input type="text" name="" required class="form_controll contact_name pd-l-23" placeholder="First name">
 										</div>
 										<div class="l-6 col-6 m-12 contact_col-input">
-											<input type="text" name="" required class="form_controll contact_name contact_name-last" placeholder="Last name">
+											<input type="text" name="" required class="form_controll contact_name contact_name-last pd-l-27" placeholder="Last name">
 										</div>
 									</div>
 								</div>
 								<div class="form_group">
-									<input type="text" name="" required class="form_controll contact_input" placeholder="Email address">
+									<input type="text" name="" required class="form_controll contact_input pd-l-23" placeholder="Email address">
 								</div>
 								<div class="form_group">
-									<input type="text" name="" required class="form_controll contact_input" placeholder="Subject message">
+									<input type="text" name="" required class="form_controll contact_input pd-l-23" placeholder="Subject message">
 								</div>
 								<div class="form_group">
-									<textarea rows="8" cols="50" class="form_controll" placeholder="Your inquiry here"></textarea>
+									<textarea rows="8" cols="50" class="form_controll pd-l-23" placeholder="Your inquiry here"></textarea>
 								</div>
 								<div class="form_group">
 									<button class="form_btn btn">Send Message</button>
