--- a/index.html
+++ b/index.html
@@ -1572,21 +1572,21 @@
 								<div class="form_group">
 									<div class="row contact_rowname">
 										<div class="l-6 col-6 m-12 contact_col-input">
-											<input type="text" name="" required class="form_controll contact_name pd-l-23" placeholder="First name">
+											<input type="text" name="" required class="form_control contact_name pd-l-23" placeholder="First name">
 										</div>
 										<div class="l-6 col-6 m-12 contact_col-input">
-											<input type="text" name="" required class="form_controll contact_name contact_name-last pd-l-27" placeholder="Last name">
+											<input type="text" name="" required class="form_control contact_name contact_name-last pd-l-27" placeholder="Last name">
 										</div>
 									</div>
 								</div>
 								<div class="form_group">
-									<input type="text" name="" required class="form_controll contact_input pd-l-23" placeholder="Email address">
+									<input type="text" name="" required class="form_control contact_input pd-l-23" placeholder="Email address">
 								</div>
 								<div class="form_group">
-									<input type="text" name="" required class="form_controll contact_input pd-l-23" placeholder="Subject message">
+									<input type="text" name="" required class="form_control contact_input pd-l-23" placeholder="Subject message">
 								</div>
 								<div class="form_group">
-									<textarea rows="8" cols="50" class="form_controll pd-l-23" placeholder="Your inquiry here"></textarea>
+									<textarea rows="8" cols="50" class="form_control pd-l-23" placeholder="Your inquiry here"></textarea>
 								</div>
 								<div class="form_group">
 									<button class="form_btn btn">Send Message</button>
