Fix responsive proffession, contact

--- a/index.html
+++ b/index.html
@@ -2,27 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Home 1</title>
-
-    <link rel="stylesheet" type="text/css" href="index.css">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Home 1</title>
+  <link rel="stylesheet" type="text/css" href="index.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
-<body >
-    <header class="Header" id="header">
-        <div class="Header_wrapper top ">
-        	<label class="Header_tog" for="checkTap">
-            	<span class="Header_icon"></span>
-            </label>
-            <input type="checkbox"  id="checkTap">
-            <label class="Header_sidebar" for="checkTap"></label>
-            <div class="Header_logo">
+<body>
+  <header class="Header" id="header">
+    <div class="Header_wrapper top ">
+      <label class="Header_tog" for="checkTap">
+        <span class="Header_icon"></span>
+      </label>
+      <input type="checkbox"  id="checkTap">
+      <label class="Header_sidebar" for="checkTap"></label>
+      <div class="Header_logo">
 				<div class="logo">
 					<div class="dot-large"></div>
 					<div class="dot-small"></div>
@@ -31,23 +29,23 @@
 				<div class="logo-text">
 					<p>Beautice</p>
 				</div>
-            </div>
-            <div class="Header_more">
-            	<div class="Header_menu">
-	                <ul class="Header_menu-children">
-	                    <li><a class="active" href="#">Home +</a></li>
-	                    <li><a href="#">About</a></li>
-	                    <li><a href="#">Service</a></li>
-	                    <li><a href="#">Gallery</a></li>
-	                    <li><a href="#">Blog</a></li>
-	                </ul>
-	            </div>
-	            <div class="Header_contact m-0">
-	                <button type="button" class="contact-btn btn">Contact</button>
-	            </div>
-	        </div>
-        </div>
-    </header>
+      </div>
+      <div class="Header_more">
+        <div class="Header_menu">
+	        <ul class="Header_menu-children">
+	          <li><a class="active" href="#">Home +</a></li>
+	          <li><a href="#">About</a></li>
+	          <li><a href="#">Service</a></li>
+	          <li><a href="#">Gallery</a></li>
+	          <li><a href="#">Blog</a></li>
+	        </ul>
+	      </div>
+	      <div class="Header_contact">
+	        <button type="button" class="contact-btn btn">Contact</button>
+	      </div>
+	    </div>
+    </div>
+  </header>
 	<div class="Container">
 		<div class="Slider">
 			<div class="slider_wrapper">
@@ -140,12 +138,11 @@
 				</div>
 				<div class="core_item" id="Core-item">
 					<div class="core_col">
-						<div class="l-4 col-12 m-12">
-							<div class="core_item_card Card	">
-								<div class="card_wrapper">
-									<div class="card_item left">
-										<div class="card_image">
-											<svg width="166" height="166" viewBox="0 0 166 166" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<div class="core_item_card Card	">
+							<div class="card_wrapper">
+								<div class="card_item left">
+									<div class="card_image">
+										<svg width="166" height="166" viewBox="0 0 166 166" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<circle cx="83" cy="83" r="83" fill="url(#paint0_linear_380_201)"/>
 												<path d="M54.6994 97.9616H128.036C132.064 97.9616 135.365 94.6609 135.365 90.6323V67.6786H54.6994C50.6708 67.6786 47.3701 70.9794 47.3701 75.008V90.6395C47.3701 94.6609 50.6708 97.9616 54.6994 97.9616Z" fill="#D5D6DA"/>
 												<path d="M43.2839 96.0878H129.78C132.785 96.0878 135.243 98.5453 135.243 101.551V104.628C135.243 112.945 128.439 119.755 120.116 119.755H43.2839C40.2786 119.755 37.8211 117.297 37.8211 114.292V101.558C37.8211 98.5453 40.2786 96.0878 43.2839 96.0878Z" fill="#D5D6DA"/>
@@ -238,22 +235,20 @@
 												<stop offset="1" stop-color="white"/>
 												</linearGradient>
 												</defs>
-												</svg>
-										</div>
-										<div class="card_info">
-											<h3 class="card_info_name fw-600 fs-18">Beauty consultation</h3>
-											<p class="card_info_description fw-400 fs-14">Non parturient amet, feugiat tellus sagittis, scelerisque eget nulla turpis.</p>
-										</div>
+											</svg>
+									</div>
+									<div class="card_info">
+										<h3 class="card_info_name fw-600 fs-18">Beauty consultation</h3>
+										<p class="card_info_description fw-400 fs-14">Non parturient amet, feugiat tellus sagittis, scelerisque eget nulla turpis.</p>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="l-4 col-12 m-12">
-							<div class="core_item_card Card	">
-								<div class="card_wrapper">
-									<div class="card_item center">
-										<div class="card_image">
-											<svg width="166" height="166" viewBox="0 0 166 166" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<div class="core_item_card Card	">
+							<div class="card_wrapper">
+								<div class="card_item center">
+									<div class="card_image">
+										<svg width="166" height="166" viewBox="0 0 166 166" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<circle cx="83" cy="83" r="83" fill="url(#paint0_linear_384_519)"/>
 												<path opacity="0.5" d="M44.7881 105.308C43.4303 102.061 48.6072 99.3849 48.6072 99.3849C48.6072 99.3849 55.3244 101.687 56.3089 101.108C57.2855 100.528 50.9495 98.0192 50.9495 98.0192C52.5533 96.5027 58.6115 95.2005 58.6115 95.2005C58.6115 95.2005 62.5815 100.893 63.3913 100.084C64.2012 99.2737 59.6119 95.2243 59.6119 95.2243C61.6763 94.4224 64.765 95.1687 64.765 95.1687C69.1954 96.8361 66.8293 102.434 66.8293 102.434C66.8293 102.434 68.2506 104.379 71.1169 105.642C71.1169 105.642 71.6965 105.84 72.4905 106.316L72.03 106.674C71.895 106.578 71.768 106.491 71.633 106.412C71.633 106.412 71.633 106.412 71.6251 106.412C71.5377 106.364 71.4186 106.301 71.2678 106.221C70.9184 106.054 70.6643 105.927 70.4897 105.832C69.4019 105.3 67.933 104.649 67.3534 104.728C67.3534 104.728 67.3454 104.617 67.2899 104.443C67.3137 104.53 67.3296 104.625 67.3534 104.728C67.8695 107.015 64.1774 110.326 61.6525 111.573C59.1276 112.819 59.5961 111.469 60.001 109.556C60.398 107.65 63.0579 105.999 63.4866 105.046C63.9074 104.093 62.5418 104.522 61.1761 105.761C59.8104 106.999 60.2154 109.016 58.0398 111.065C55.8643 113.113 50.6477 110.088 50.6477 110.088C52.6565 109.334 54.8718 106.181 54.5463 105.538C54.2207 104.895 49.9649 108.293 49.163 108.643C48.361 108.976 46.1458 108.548 44.7881 105.308Z" fill="#A8CCFF"/>
 												<path d="M40.7308 62.2657C41.1357 58.3354 47.6782 58.4704 47.6782 58.4704C47.6782 58.4704 53.0694 64.3539 54.3478 64.3062C55.6261 64.2586 50.7192 58.3751 50.7192 58.3751C53.1091 57.7399 59.7946 59.709 59.7946 59.709C59.7946 59.709 60.66 67.4584 61.8907 67.0932C63.1214 66.7279 60.7791 60.2728 60.7791 60.2728C63.2484 60.5904 65.8924 62.9803 65.8924 62.9803C69.3701 66.9979 64.0266 71.2537 64.0266 71.2537C64.0266 71.2537 64.3839 73.9295 66.5276 76.7243C66.5276 76.7243 66.9882 77.2245 67.5281 78.1297L66.8849 78.2329C66.8055 78.0662 66.7182 77.9153 66.6309 77.7644V77.7565C66.5673 77.6612 66.4879 77.5342 66.3768 77.3754C66.1148 77.026 65.9401 76.764 65.821 76.5735C65.0349 75.4619 63.9313 74.0327 63.3199 73.7945C63.3199 73.7945 63.3755 73.6833 63.4072 73.4769C63.3755 73.5801 63.3517 73.6833 63.3199 73.7945C62.6053 76.3273 57.1823 77.6136 54.0222 77.4865C50.8621 77.3595 52.0531 76.2797 53.4744 74.6123C54.8956 72.9449 58.4051 72.7464 59.334 72.0318C60.263 71.3172 58.683 71.0076 56.6742 71.4998C54.6574 71.9921 53.9746 74.1915 50.7351 75.049C47.4956 75.8986 43.9703 70.1183 43.9703 70.1183C46.3602 70.4518 50.2349 68.5303 50.2587 67.7204C50.2905 66.9105 44.264 67.9745 43.2795 67.8951C42.2791 67.8078 40.3258 66.1959 40.7308 62.2657Z" fill="#DCEAFB"/>
@@ -478,22 +473,20 @@
 												<stop offset="1" stop-color="white" stop-opacity="0"/>
 												</linearGradient>
 												</defs>
-												</svg>
-										</div>
-										<div class="card_info">
-											<h3 class="card_info_name fw-600 fs-18">Skin treatments</h3>
-											<p class="card_info_description fw-400 fs-14">Non parturient amet, feugiat tellus sagittis, scelerisque eget nulla turpis.</p>
-										</div>
+											</svg>
+									</div>
+									<div class="card_info">
+										<h3 class="card_info_name fw-600 fs-18">Skin treatments</h3>
+										<p class="card_info_description fw-400 fs-14">Non parturient amet, feugiat tellus sagittis, scelerisque eget nulla turpis.</p>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="l-4 col-12 m-12">
-							<div class="core_item_card Card	">
-								<div class="card_wrapper">
-									<div class="card_item right">
-										<div class="card_image">
-											<svg width="166" height="166" viewBox="0 0 166 166" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<div class="core_item_card Card	">
+							<div class="card_wrapper">
+								<div class="card_item right">
+									<div class="card_image">
+										<svg width="166" height="166" viewBox="0 0 166 166" fill="none" xmlns="http://www.w3.org/2000/svg">
 												<circle cx="83" cy="83" r="83" fill="url(#paint0_linear_382_232)"/>
 												<path d="M43.8183 93.2554C44.412 93.479 45.0829 93.1937 45.3296 92.6077L55.7624 67.7325L52.0535 66.3292L43.1243 91.7518C42.9084 92.361 43.2169 93.0241 43.8183 93.2554Z" fill="#364154"/>
 												<path d="M55.7547 58.7494L58.0448 59.6207L55.7624 67.7325L52.0535 66.3291L55.7547 58.7494Z" fill="#131F2D"/>
@@ -519,12 +512,11 @@
 												<stop offset="1" stop-color="white" stop-opacity="0"/>
 												</linearGradient>
 												</defs>
-												</svg>
-										</div>
-										<div class="card_info">
-											<h3 class="card_info_name fw-600 fs-18">Beauty product</h3>
-											<p class="card_info_description fw-400 fs-14">Non parturient amet, feugiat tellus sagittis, scelerisque eget nulla turpis.</p>
-										</div>
+											</svg>
+									</div>
+									<div class="card_info">
+										<h3 class="card_info_name fw-600 fs-18">Beauty product</h3>
+										<p class="card_info_description fw-400 fs-14">Non parturient amet, feugiat tellus sagittis, scelerisque eget nulla turpis.</p>
 									</div>
 								</div>
 							</div>
@@ -1557,7 +1549,7 @@
 								</svg>
 						</div>
 					</div>
-					<div class="contact_mainRight l-6 col-12 m-12">
+					<div class="contact_mainRight">
 						<div class="contact_main_wrapper">
 							<div class="contact_mainRight_info">
 								<div class="contact_title_desc">
@@ -1571,10 +1563,10 @@
 							<div class="contact_mainRight_form">
 								<div class="form_group">
 									<div class="row contact_rowname">
-										<div class="l-6 col-6 m-12 contact_col-input">
+										<div class="contact_col-input">
 											<input type="text" name="" required class="form_control contact_name pd-l-23" placeholder="First name">
 										</div>
-										<div class="l-6 col-6 m-12 contact_col-input">
+										<div class="contact_col-input">
 											<input type="text" name="" required class="form_control contact_name contact_name-last pd-l-27" placeholder="Last name">
 										</div>
 									</div>
@@ -1588,7 +1580,7 @@
 								<div class="form_group">
 									<textarea rows="8" cols="50" class="form_control pd-l-23" placeholder="Your inquiry here"></textarea>
 								</div>
-								<div class="form_group">
+								<div class="form_group pd-l-r">
 									<button class="form_btn btn">Send Message</button>
 								</div>
 							</div>
@@ -1599,80 +1591,77 @@
 		</div>
 	</div>
 	<footer class="Footer">
-    	<div class="footer_wrapper">
-    		<div class="footer_container-fluid">	
-    			<div class="footer_container">
-    				<div class="row">
-    					<div class="footer_col">
-    						<div class="footer_info">
-    							<div class="footer_info-logo">
-    								<img src="assets/icon_home1/Footer Logo.png" alt="img">
-    							</div>
-    							<div class="footer_info-describes">
-    								<p class="footer_info-describe fs-16 fw-700">
-    									<strong>Beautice</strong> is a Beauty Clinic WordPress Theme.
-    								</p>
-    								<br/>
-    								<p class="footer_info-address fs-14 fw-500">
-    									<i>Baker Steet 101, NY, United States.</i>
-    								</p>
-    								<div class="footer_info-contacts">
-    									<span class="footer_info_phoneNumber fw-500 fs-14"><i>+521 569 8966.</i></span>
-    									<span class="footer_info_email fw-500 fs-14"><i>mail@company.com.</i></span>
-    								</div>
-    							</div>
+    <div class="footer_wrapper">
+    	<div class="footer_container-fluid">	
+    		<div class="footer_container">
+  				<div class="row">
+  					<div class="footer_col">
+    					<div class="footer_info">
+    						<div class="footer_info-logo">
+    							<img src="assets/icon_home1/Footer Logo.png" alt="img">
     						</div>
-    					</div>
-    					<div class="footer_col">
-    						<div class="footer_more">
-    							<div class="footer_more-page footer_more-children">
-    								<p class="fw-600 fs-18">Pages</p>
-    								<ul >
-    									<li><i class="fa-solid fa-caret-right"></i>Home</li>
-    									<li><i class="fa-solid fa-caret-right"></i>About</li>
-    									<li><i class="fa-solid fa-caret-right"></i>Services</li>
-    									<li><i class="fa-solid fa-caret-right"></i>Gallery</li>
-    									<li><i class="fa-solid fa-caret-right"></i>Team</li>
-    								</ul>
-    							</div>
-    							<div class="footer_more-informations footer_more-children">
-    								<strong class="fw-600 fs-18">Informations</strong>
-    								<ul>
-    									<li><i class="fa-solid fa-caret-right"></i>Terms & conditions</li>
-    									<li><i class="fa-solid fa-caret-right"></i>Privacy policy</li>
-    									<li><i class="fa-solid fa-caret-right"></i>Blog</li>
-    									<li><i class="fa-solid fa-caret-right"></i>Contact</li>
-    								</ul>
-    							</div>
-    						</div>
+    						<div class="footer_info-describes">
+    							<p class="footer_info-describe fs-16 fw-700">
+  									<strong>Beautice</strong> is a Beauty Clinic WordPress Theme.
+  								</p>
+    							<br/>
+    							<p class="footer_info-address fs-14 fw-500">
+    								<i>Baker Steet 101, NY, United States.</i>
+    							</p>
+    							<div class="footer_info-contacts">
+    								<span class="footer_info_phoneNumber fw-500 fs-14"><i>+521 569 8966.</i></span>
+    								<span class="footer_info_email fw-500 fs-14"><i>mail@company.com.</i></span>
+  								</div>
+  							</div>
     					</div>
     				</div>
-    				<div class="footer_bottom">
-    					<div class="footer_col">
-    						<div class="footer_internet">
-    							<div class="footer_group-icon">
-    								<span class="icon"><a target="_blank" href="https://www.facebook.com/bachasoftware"><img src="assets/icon_home1/facebook-f.png" alt=""></a></span>
-	    							<span class="icon"><a target="_blank" href="https://x.com/i/flow/login?redirect_after_login=%2FBacHaSoftware"><img src="assets/icon_home1/twitter (1).png" alt=""></a></span>
-	    							<span class="icon"><a target="_blank" href="https://www.linkedin.com/company/bac-ha-software/"><img src="assets/icon_home1/linkedin-in.png" alt=""></a></span>
-    								<span class="icon"><a target="_blank" href="https://www.youtube.com/@bhsoft"><img src="assets/icon_home1/youtube.png" alt=""></a></span>
-    								<span class="icon"><a target="_blank" href=""><img src="assets/icon_home1/instagram (1).png" alt=""></a></span>
-    							</div>
+    				<div class="footer_col">
+    					<div class="footer_more">
+    						<div class="footer_more-page footer_more-children">
+  								<p class="fw-600 fs-18">Pages</p>
+  								<ul >
+    								<li><i class="fa-solid fa-caret-right"></i>Home</li>
+    								<li><i class="fa-solid fa-caret-right"></i>About</li>
+    								<li><i class="fa-solid fa-caret-right"></i>Services</li>
+    								<li><i class="fa-solid fa-caret-right"></i>Gallery</li>
+    								<li><i class="fa-solid fa-caret-right"></i>Team</li>
+    							</ul>
     						</div>
-    					</div>
-    					<div class="footer_col">
-    						<p class="footer_certification fw-400 fs-16"><i>© AltDesain Studio 2021 - All right reserved.</i></p>
+    						<div class="footer_more-informations footer_more-children">
+  								<strong class="fw-600 fs-18">Informations</strong>
+  								<ul>    									<li><i class="fa-solid fa-caret-right"></i>Terms & conditions</li>
+    								<li><i class="fa-solid fa-caret-right"></i>Privacy policy</li>
+    								<li><i class="fa-solid fa-caret-right"></i>Blog</li>
+    								<li><i class="fa-solid fa-caret-right"></i>Contact</li>
+    							</ul>
+    						</div>
     					</div>
     				</div>
     			</div>
+    			<div class="footer_bottom">
+  					<div class="footer_col">
+  						<div class="footer_internet">
+    						<div class="footer_group-icon">
+    							<span class="icon"><a target="_blank" href="https://www.facebook.com/bachasoftware"><img src="assets/icon_home1/facebook-f.png" alt=""></a></span>
+	    						<span class="icon"><a target="_blank" href="https://x.com/i/flow/login?redirect_after_login=%2FBacHaSoftware"><img src="assets/icon_home1/twitter (1).png" alt=""></a></span>
+	    						<span class="icon"><a target="_blank" href="https://www.linkedin.com/company/bac-ha-software/"><img src="assets/icon_home1/linkedin-in.png" alt=""></a></span>
+    							<span class="icon"><a target="_blank" href="https://www.youtube.com/@bhsoft"><img src="assets/icon_home1/youtube.png" alt=""></a></span>
+    							<span class="icon"><a target="_blank" href=""><img src="assets/icon_home1/instagram (1).png" alt=""></a></span>
+    						</div>
+  						</div>
+  					</div>
+    				<div class="footer_col">
+    					<p class="footer_certification fw-400 fs-16"><i>© AltDesain Studio 2021 - All right reserved.</i></p>
+    				</div>
+    			</div>
     		</div>
-    		<div class="footer_scroll" id="scrollBtn">
-                <img src="assets/icon_home1/ToTop Button.png" alt="img">
-            </div>
-    	</div>
-    </footer>
-	<div id="_atssh" style="display: none;"></div>
-   	<script src="./script.js"></script>
+  		</div>
+  		<div class="footer_scroll" id="scrollBtn">
+        <img src="assets/icon_home1/ToTop Button.png" alt="img">
+      </div>
+    </div>
+  </footer>
+  <script src="./script.js"></script>
 </body>
-
 </html>
 
