Fix responsive, layout item

--- a/index.html
+++ b/index.html
@@ -1594,7 +1594,7 @@
     <div class="footer_wrapper">
     	<div class="footer_container-fluid">	
     		<div class="footer_container">
-  				<div class="row">
+  				<div class="row footer_column">
   					<div class="footer_col">
     					<div class="footer_info">
     						<div class="footer_info-logo">
@@ -1610,7 +1610,7 @@
     							</p>
     							<div class="footer_info-contacts">
     								<span class="footer_info_phoneNumber fw-500 fs-14"><i>+521 569 8966.</i></span>
-    								<span class="footer_info_email fw-500 fs-14"><i>mail@company.com.</i></span>
+    								<span class="footer_info_email fw-500 fs-14"><a href="mailto:mail@company.com">mail@company.com.</a></span>
   								</div>
   							</div>
     					</div>
