--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       </div>
       <div class="Header_more">
         <div class="Header_menu">
-	        <ul class="Header_menu-children">
-	          <li><a class="active" href="#">Home +</a></li>
-	          <li><a href="#">About</a></li>
-	          <li><a href="#">Service</a></li>
-	          <li><a href="#">Gallery</a></li>
-	          <li><a href="#">Blog</a></li>
+	        <ul class="Header_menu-children _menuItem">
+	          <li class="_menuItem"><a class="active" href="#">Home +</a></li>
+						<li class="_menuItem"><a href="#">About</a></li>
+	          <li class="_menuItem"><a href="#">Service</a></li>
+	          <li class="_menuItem"><a href="#">Gallery</a></li>
+	          <li class="_menuItem"><a href="#">Blog</a></li>
 	        </ul>
 	      </div>
 	      <div class="Header_contact">
